change in dockerfile and travis.yml file succesfully fully

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,5 @@ services:
   - docker
 
 before_install:
-  - docker build -t lenin -f Dockerfile .
+  - docker build -t lenin .
 
-script: 
-  - docker run lenin -- --coverage
